ci: added opa and oras version env variables

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags: ["[0-9]+.[0-9]+.[0-9]+"]
 
+env:
+  ORAS_VERSION: 1.2.1
+  OPA_VERSION: 0.70.0
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,16 +19,19 @@ jobs:
       - name: Install ORAS CLI
         run: |
           # Download the latest ORAS release for Linux
-          wget https://github.com/oras-project/oras/releases/download/v1.1.0/oras_1.1.0_linux_amd64.tar.gz
-          tar -xzf oras_1.1.0_linux_amd64.tar.gz
+          wget https://github.com/oras-project/oras/releases/download/v${{ env.ORAS_VERSION }}/oras_${{ env.ORAS_VERSION }}_linux_amd64.tar.gz
+          tar -xzf oras_${{ env.ORAS_VERSION }}_linux_amd64.tar.gz
           sudo install -m 755 oras /usr/local/bin/
+      
+      - name: Check ORAS version
+        run: oras version
       
       - name: Login to DockerHub Registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | oras login docker.io -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Set up OPA
         run: |
-          curl -L -o opa https://github.com/open-policy-agent/opa/releases/latest/download/opa_linux_amd64
+          curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v${{ env.OPA_VERSION }}/opa_linux_amd64
           chmod +x opa
           sudo mv opa /usr/local/bin/
       
@@ -37,7 +44,7 @@ jobs:
       - name: Build OPA Bundle
         run: opa build src
 
-      - name: Check current folder after build
+      - name: Check current folder after OPA build
         run: ls -la
 
       - name: Check specific var
