feat: added full azure latency matrix

--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -1,6 +1,6 @@
 {
     "userSettings": {
         "cloudProvider": "azure",
-        "originRegion": "Australia Central"
+        "originRegion": "Italy North"
     }
 }
