feat: added mutation for location

--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -1,6 +1,6 @@
 {
     "userSettings": {
         "cloudProvider": "azure",
-        "originRegion": "Italy North"
+        "originRegion": "italynorth"
     }
 }
