feat: added gdpr region policy (w/ mock data)

--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -1,6 +1,9 @@
 {
     "userSettings": {
         "cloudProvider": "azure",
-        "originRegion": "italynorth"
+        "originRegion": "italynorth",
+        "gdprCompliance": {
+            "enabled": true
+        }
     }
 }
