feat: added ElectricityMaps region mapping + minor fixes

--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -4,6 +4,8 @@
         "originRegion": "italynorth",
         "gdprCompliance": {
             "enabled": true
-        }
+        },
+        "defaultSchedulingTime": "2049-03-15T11:34:45Z",
+        "defaultSchedulingLocation": "italynorth"
     }
 }
