fix: completed EM azure dataset + minor fixes

--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -3,7 +3,7 @@
         "cloudProvider": "azure",
         "originRegion": "italynorth",
         "gdprCompliance": {
-            "enabled": true
+            "enabled": false
         },
         "defaultSchedulingTime": "2049-03-15T11:34:45Z",
         "defaultSchedulingLocation": "italynorth"
