--- a/src/user_settings.json
+++ b/src/user_settings.json
@@ -1,7 +1,7 @@
 {
     "userSettings": {
-        "cloudProvider": "aws",
-        "originRegion": "us-west-2",
+        "cloudProvider": "azure",
+        "originRegion": "italynorth",
         "gdprCompliance": {
             "enabled": false
         },
